# demo-semantic-commits

./: .pre-commit-config.yaml  README.md  pyproject.toml
demo_semantic_commits/: smart_math.py
