[tool.poetry]
name = "demo-semantic-commits"
version = "0.1.0"
description = ""
authors = ["Lennox Stevenson <lennox.stevenson@perpetua.io>"]
readme = "README.md"
packages = [{include = "demo_semantic_commits"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.19.0"
commitizen = "^2.24.0"
semantic-release = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
commit_subject = "chore: bump version to {version}"
